<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key_map">AIzaSyCKDGVrxkDbRrEax4hFtpm2oi-nTjiqNos</string>
    <string name="dup_back">Nhấn back lần nữa để thoát</string>
    <string name="write_setting_permission_error">This feature requires permission \"write settings\"</string>
    <string name="storage_permission_error">This feature requires permission \"write settings\"</string>
    <string name="srn_drawer_open">Open</string>
    <string name="srn_drawer_close">Close</string>
    <string name="srn_ex_no_menu_view">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>
    <string name="app_name">RoyalJourney</string>
    <string name="login_text">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="by_tapping_">Or Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="Keep">Keep Me Signed In</string>
    <string name="MeAbout">Email Me About Special Pricing</string>
    <string name="create_acco">Create Account</string>
    <string name="text_signin">already have an account?</string>
    <string name="welcome_back_login">Chào mừng trở lại!</string>
    <string name="enter_your_email_login">Nhập email của bạn</string>
    <string name="forgot_password_login">Quên mật khẩu</string>
    <string name="an_account_login">Bạn chưa có tài khoản?</string>
    <string name="sign_up_login">Đăng ký</string>
    <string name="sign_in_login">Đăng nhập</string>
    <string name="enter_pass_login">Nhập mật khẩu</string>
    <string name="welcome_royaljourney_registration">RoyalJourney chào mừng!</string>
    <string name="help_your_registration">Hãy giúp bạn hoàn thành nhiệm vụ của mình</string>
    <string name="full_name_registration">Nhập tên đầy đủ của bạn</string>
    <string name="enter_your_email_registration">Nhập email của bạn</string>
    <string name="enter_pass_registration">Nhập mật khẩu</string>
    <string name="confirm_password_registration">Xác nhận lại mật khẩu</string>
    <string name="register_registration">Đăng ký</string>
    <string name="already_have_an_account_registration">Bạn đã có tài khoản?</string>
    <string name="forgot_pass_forgot">Forgot Password?</string>
    <string name="help_pass1_forgot">Đừng lo! Chúng tôi sẽ giúp bạn</string>
    <string name="help_pass2_forgot">khôi phục mật khẩu của bạn</string>
    <string name="send_my_password_forgot">Gửi mật khẩu của tôi</string>
    <string name="tin_tuc_detaiproduct">Tin tức mới nhất trên các lĩnh vực chính trị, xã hội, văn hóa, thể thao ở Việt Nam và quốc tế. Tin tức thời sự mỗi ngày sẽ được Tuổi Trẻ Online liên tục cập ...</string>
    <string name="huy_phong_detailproduct">Hủy đặt phòng là việc khách thông báo và yêu cầu khách sạn xỏa bỏ các thỏa thuận đặt buồng đã có giữa 2 bên ngay từ khi họ chưa lưu trú tại khách sạn vì không còn nhu cầu sử dụng các buồng đã thuê nữa. Khi đó, khách sạn có quyền bán những phòng khách đã báo hủy cho khách khác</string>
    <string name="feedback_detaiproduct">1 week ago</string>
    <string name="underlineText"><u>Hiển thị tất cả 53 đánh giá</u></string>
    <string name="room_detailproduct">1 bed big</string>
    <string name="location_homeFragment">Location</string>
    <string name="titleSearch_homeFragment">Địa chỉ tìm kiếm, hoặc gần bạn</string>
    <string name="NearFromYou_homeFragment">Gần bạn nhất</string>
    <string name="SeeMore_homeFragment">Xem thêm</string>
    <string name="BestForYou_homeFragment">Tốt cho bạn</string>
    <string name="Vuotsangphaishowmenu_fragmentText">Vuốt sang phải để show menu</string>
    <string name="OrchadHouse_itemBestforyou">Orchad House</string>
    <string name="Rp_itemBestForYou">Rp. 25000</string>
    <string name="Bedroom_itemBestforyou">6 Bedroom</string>
    <string name="Bathroom_itemBestforyou">6 Bathroom</string>
    <string name="DreamsvilleHouse_itemNearFromYou">Dreamsville House</string>
    <string name="JlSultanIskandarMuda_itemNearFromYou">Jl. Sultan Iskandar Muda</string>
    <string name="km_itemNearFromYou">1.8 km</string>
    <string name="home_arrays">Khám phá</string>
    <string name="profile_arrays">Hồ sơ</string>
    <string name="nearby_arrays">Gần tôi</string>
    <string name="bookmark_arrays">Yêu thích</string>
    <string name="notification_arrays">Thông báo</string>
    <string name="notification_arrays_text">Hiện tại bạn chưa có thông báo nào</string>
    <string name="message_arrays">Tin nhắn</string>
    <string name="setting_arrays">Cài đặt</string>
    <string name="help_arrays">Trợ giúp</string>
    <string name="info_myself">Thông tin cá nhân</string>
    <string name="info_myself_edit">Thay đổi thông tin cá nhân của bạn</string>
    <string name="logout_arrays">Đăng xuất</string>
    <string name="LoginSuccess">Sign in successfully</string>
    <string name="LoginFailed">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="RegisterSuccess">Sign up successfully</string>
    <string name="RegisterFailed">Email already exists</string>
    <string name="title_activity_near_from_you_maps">NearFromYouMapsActivity</string>
    <string name="api_key_app">AIzaSyDId5Ne9ty3PAl9aMBW4A-_7WcXfH7ngFA</string>
    <string name="distance">Distance: </string>
    <string name="time">Time: </string>
    <string name="textPerNight"> /đêm</string>
    <string name="textPerNightVN"> /đêm</string>
    <string name="askForMapPermission">Xin lỗi bạn phải cấp quyền truy cập vị trí</string>
    <string name="motadetail">Mô tả</string>
    <string name="phongdetail">Nơi bạn sẽ ngủ nghỉ</string>
    <string name="phongtamdetail">Phòng tắm</string>
    <string name="tienichdetail">Tiện nghi của chúng tôi</string>
    <string name="anhdetail">Ảnh phòng</string>
    <string name="mapdetail">Nơi bạn sẽ đến</string>
    <string name="availabilitystatusdetail">Tình trạng phòng sẵn:</string>
    <string name="houserulesdetail">Nội quy nhận phòng</string>
    <string name="Cancellationpolicydetail">Chính sách hủy</string>
    <string name="choseRoom">Chọn phòng</string>
    <string name="CancellationpolicydetailVer2">Chính sách chung</string>
    <string name="pricedetail">Giá thuê</string>
    <string name="rentnowdetail">Chọn phòng</string>
    <string name="danhgiadetail">Đánh giá</string>
    <string name="Ytedetail">Y tế và an toàn</string>
    <string name="Y_te_detail">Các biện pháp an toàn trong đại dịch COVID-19 của BookingAppRoyalJourney được áp dụng. Có máy phát hiện khí CO/máy báo khói, Camera an ninh/thiết bị ghi</string>
    <string name="dialogstartdate">Thêm ngày bắt đầu của bạn để tiếp tục</string>
    <string name="dialogcontentnomal">Điều này đảm bảo rằng bạn sẽ không bỏ lỡ nội dung cập nhật về chuyến đi</string>
    <string name="nullphone">Thêm số điện thoại của bạn</string>
    <string name="limitperson">Số lượng khách thuê</string>
    <string name="textpayment">Phương thức thanh toán</string>
    <string name="textpayment2">Vui lòng chọn phương thức thanh toán</string>
    <string name="home">Home</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="Citizen_identity_card">Citizen identity card</string>
    <string name="SAVE">LƯU</string>
    <string name="setting_arrays_travel">Chuyến đi</string>
    <string name="your_order_just_arrived">Đoạn Chat Của Bạn Ở Đây</string>
    <string name="chuyen_di_nhu_nao">Chuyến đi như nào?</string>
    <string name="feedBackHd">Đánh giá của bạn giúp chúng tôi hoàn thiện hơn</string>
    <string name="submit_feedback">Lưu Đánh Giá</string>
    <string name="hint_comment">Đánh giá của bạn...</string>
    <string name="Ten">Tên</string>
    <string name="Sdt_editprofile">Số điện thoại</string>
    <string name="cccd">CCCD</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="Thay_doi">Thay đổi</string>
    <string name="comment_feedback">Viết Đánh Giá</string>
    <string name="BillOder_add_amount">Thêm số lượng khách thuê của bạn để tiếp tục</string>
    <string name="BillOder_add_uy_tin">Xin lỗi bạn chưa đủ uy tín</string>
    <string name="BillOder_add_uy_tin_5">Bạn phải đặt phòng thành công ít nhất 5 lần thì mới sử dụng được chức năng này</string>
    <string name="BillOder_host_received_date">Chủ nhà chỉ cho phép nhận phòng từ ngày</string>
    <string name="BillOder_add_pay_day">Chủ nhà chỉ cho phép trả phòng từ ngày</string>
    <string name="BillOder_add_card">Thêm thẻ thanh toán của bạn để tiếp tục</string>
    <string name="BillOder_add_phone_number">Thêm số điện thoại của bạn để tiếp tục</string>
    <string name="BillOder_add_phone_number_check">Xin nhãy nhập số điện thoại</string>
    <string name="BillOder_BillOder_add_amount">Chủ nhà chỉ cho phép trả phòng vào ngày</string>
    <string name="BillOder_host_received_max">Số lượng khách không được quá cho phép</string>
    <string name="BillOder_add_phone_number_check_1">Xin hãy nhập số điện thoại khu vực việt nam</string>
    <string name="Successfully">Thành công</string>
    <string name="Successfully_feedback">Phản hồi của bạn đã được lưu lại , chúc bạn 1 ngày tốt lành</string>
    <string name="out_of_room">Đã hết phòng</string>
    <string name="Billoder_date_cancel">Huỷ trước ngày %s để được hoàn lại tiền , nếu bạn hủy sau ngày %s sẽ không hoàn lại tiền</string>
    <string name="Billoder_date_cancel_1">để được hoàn lại một phần tiền</string>
    <string name="Ly_do_huy">Hãy cho chúng tôi biết lí do bạn huỷ, ý kiển của bạn sẽ giúp chúng tôi hoàn thiện hơn</string>
    <string name="Hanoi">Hà Nội</string>
    <string name="Tp_Ho_Chi_Minh">Tp.Hồ Chí Minh</string>
    <string name="textHoso">Hồ sơ của bạn</string>
    <string name="textHoso1">Đăng nhập để bắt đầu lập kế hoạch cho chuyến đi tiếp theo của bạn.</string>
    <string name="Vietnam_Tourism_Joint_Stock_Company_VnTravel">Công ty cổ phần du lịch Việt Nam VnTravel</string>
    <string name="Flight_booking_assistance">Hỗ trợ đặt vé máy bay:</string>
    <string name="Office_in_Hanoi">Văn phòng tại Hà Nội:</string>
    <string name="th_Floor_Peakview_Building_Hoang_Cau_Dong_Da_Hanoi">Tầng 11,Tòa Peakview, 36 Hoàng Cầu, Đống Đa,Hà Nội</string>
    <string name="Business_registration_number">Số ĐKKD:</string>
    <string name="Office_in_Ho_Chi_Minh_City">Văn phòng tại Tp.Hồ Chí Minh:</string>
    <string name="Floor_Central_Park_Building_Nguyen_Du_District_Ho_Chi_Minh_City">Tầng 6, Tòa Nhà Central Park, 17 Nguyễn Du, Quận 1, Tp.Hồ Chí Minh</string>
    <string name="issued_on">0108886908 cấp ngày 04/09/2019</string>
    <string name="Place_of_issue">Nơi cấp:</string>
    <string name="Hanoi_Department_of_Planning_and_Investment">Sở kế hoạch và đầu tư thành phố Hà Nội</string>
    <string name="Business_Areas">Lĩnh vực kinh doanh:</string>
    <string name="Travel_agency">Đại lý du lịch</string>
    <string name="Domain_address">Địa chỉ tên miền:</string>
    <string name="Digital_bank_account">Tài khoản ngân hàng số:</string>
    <string name="Techcombank_Ha_Dong_Branch">Techcombank Chi Nhánh Hội Sở</string>
    <string name="Account_holders">Chủ tài khoản:</string>
    <string name="RoyalJourney_Vietnam_Company_Limited">Công Ty TNHH RoyalJourney Việt Nam</string>
    <string name="Operating_regulations">Quy chế hoạt động</string>
    <string name="Privacy_Policy">Chính sách bảo mật</string>
    <string name="Process_of_resolving_and_disputing_complaints">Quy trình giải quyết, tranh chấp khiếu nại</string>
    <string name="RoyalJourney">RoyalJourney</string>
</resources>