<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.home.ProfileFragment">

    <LinearLayout
        android:id="@+id/profileVisiable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15dp"
            android:text="@string/textHoso"
            android:textColor="@color/black"
            android:textSize="@dimen/_30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_23dp"
            android:layout_marginTop="@dimen/_10dp"
            android:lines="2"
            android:text="@string/textHoso1"
            android:textSize="@dimen/_20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_25dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:background="@drawable/bg_buttom"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_in_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <LinearLayout
            android:id="@+id/siginProfileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an_account_login"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvSignUpProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5dp"
                android:text="@string/sign_up_login"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>