<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAboutUs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.setting.AboutUsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/_8dp"
        android:id="@+id/toolBar"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Vietnam_Tourism_Joint_Stock_Company_VnTravel"
                android:textColor="@color/black"
                android:textSize="@dimen/_19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Hanoi"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv1"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="(024) 7109 9999"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv2"
                app:layout_constraintStart_toEndOf="@+id/tv2"
                app:layout_constraintTop_toTopOf="@+id/tv2" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Tp_Ho_Chi_Minh"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv2"
                app:layout_constraintTop_toBottomOf="@+id/tv2" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="(028) 7109 9998"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv4"
                app:layout_constraintStart_toEndOf="@+id/tv4"
                app:layout_constraintTop_toTopOf="@+id/tv4" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Flight_booking_assistance"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv4"
                app:layout_constraintTop_toBottomOf="@+id/tv4" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="1900 2083 "
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv6"
                app:layout_constraintStart_toEndOf="@+id/tv6"
                app:layout_constraintTop_toTopOf="@+id/tv6" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="Email :"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv6"
                app:layout_constraintTop_toBottomOf="@+id/tv6" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv8"
                android:text="royaljouroyal@gmail.com"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv8"
                app:layout_constraintStart_toEndOf="@+id/tv8"
                app:layout_constraintTop_toTopOf="@+id/tv8" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Office_in_Hanoi"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv8"
                app:layout_constraintTop_toBottomOf="@+id/tv8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="11"
                android:text="@string/th_Floor_Peakview_Building_Hoang_Cau_Dong_Da_Hanoi"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Office_in_Ho_Chi_Minh_City"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv8"
                android:ems="8"
                android:text="@string/Floor_Central_Park_Building_Nguyen_Du_District_Ho_Chi_Minh_City"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11" />


            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Business_registration_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_toEndOf="@+id/tv8"
                android:text="@string/issued_on"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Place_of_issue"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_toEndOf="@+id/tv8"
                android:ems="12"
                android:text="@string/Hanoi_Department_of_Planning_and_Investment"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Business_Areas"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_toEndOf="@+id/tv8"
                android:text="@string/Travel_agency"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Domain_address"
                android:textColor="@color/black"
                android:textSize="@dimen/_18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/RoyalJourney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv8"
                android:text="@string/RoyalJourney"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView19"
                app:layout_constraintStart_toEndOf="@+id/textView19"
                app:layout_constraintTop_toTopOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Digital_bank_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_toEndOf="@+id/tv8"
                android:text="19027493250015"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView21"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toTopOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/Techcombank_Ha_Dong_Branch"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:layout_constraintStart_toStartOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Account_holders"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView23"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv8"
                android:ems="12"
                android:text="@string/RoyalJourney_Vietnam_Company_Limited"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:layout_constraintStart_toEndOf="@+id/textView24"
                app:layout_constraintTop_toTopOf="@+id/textView24" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Operating_regulations"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView24"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Privacy_Policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView25"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:paddingBottom="@dimen/_16dp"
                android:text="@string/Process_of_resolving_and_disputing_complaints"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView26"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>