<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="@dimen/_10dp"
    tools:ignore="UnusedAttribute">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginRight="@dimen/_14dp"
        android:background="@color/black"
        app:cardCornerRadius="@dimen/_10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_itembesforyou" />


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrchadHouse_itemBestforyou"
            android:textColor="@color/black"
            android:textSize="@dimen/_16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/Rp_itemBestForYou"
            android:textColor="@color/black"
            android:textSize="@dimen/_14dp" />

        <TextView
            android:id="@+id/dateAndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/Bedroom_itemBestforyou"
            android:textColor="@color/color_858585"
            android:textSize="@dimen/_14dp" />
    </LinearLayout>

</LinearLayout>